--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="1"></div>
-    <div class="2"></div>
-    <div class="3"></div>
-    <div class="4"></div>
+    <div class="one shape"></div>
+    <div class="two shape"></div>
+    <div class="three shape"></div>
+    <div class="four shape"></div>
 </body>
 </html>
